Use i18n in error boundary

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -57,5 +57,9 @@
       "operator": "Operator",
       "viewer": "Viewer"
     }
+  },
+  "errorBoundary": {
+    "message": "An error occurred",
+    "retry": "Retry"
   }
 }
