--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -38,7 +38,9 @@
   },
   "filters": {
     "allPower": "All kW",
-    "allEquipment": "All Equipment"
+    "allEquipment": "All Equipment",
+    "power": "kW",
+    "equipment": "Equipment"
   },
   "status": {
     "normal": "Normal",
@@ -64,5 +66,37 @@
   "errorBoundary": {
     "message": "An error occurred",
     "retry": "Retry"
+  },
+  "alerts": {
+    "title": "Alerts",
+    "allSeverity": "All Severity",
+    "allStatus": "All Status",
+    "acknowledgeSelected": "Acknowledge Selected",
+    "clearSelected": "Clear Selected",
+    "headers": {
+      "time": "Time",
+      "kw": "kW",
+      "device": "Device",
+      "type": "Type",
+      "severity": "Severity",
+      "actions": "Actions"
+    },
+    "buttons": {
+      "acknowledge": "Acknowledge",
+      "clear": "Clear",
+      "details": "Details"
+    },
+    "noAlerts": "No alerts",
+    "filters": {
+      "severity": "Severity",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "status": "Status"
+    },
+    "status": {
+      "new": "new",
+      "acknowledged": "acknowledged",
+      "cleared": "cleared"
+    }
   }
 }
