--- a/frontend/public/locales/ko/common.json
+++ b/frontend/public/locales/ko/common.json
@@ -16,7 +16,7 @@
   "nav": {
     "dashboard": "대시보드",
     "anomalies": "이상",
-    "maintenance": "정비",
+    "maintenance": "유지보수",
     "equipment": "장비",
     "alerts": "알림",
     "reports": "리포트",
