feat(settings): add reset option

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -72,6 +72,7 @@
     "search": "Search settings",
     "save": "Save Changes",
     "saved": "Settings saved",
+    "reset": "Reset",
     "profile": {
       "name": "Name",
       "email": "Email",
