--- a/frontend/public/locales/ko/common.json
+++ b/frontend/public/locales/ko/common.json
@@ -72,6 +72,7 @@
     "search": "설정 검색",
     "save": "저장",
     "saved": "저장 완료",
+    "reset": "초기화",
     "profile": {
       "name": "이름",
       "email": "이메일",
