--- a/frontend/public/locales/ko/common.json
+++ b/frontend/public/locales/ko/common.json
@@ -181,8 +181,8 @@
     }
   },
   "monitoring": {
-    "title": "실시간 모니터링",
-    "subtitle": "장비 상태, 이상 징후, 센서 신호를 실시간으로 확인하세요.",
+    "title": "라이브 장비 대시보드",
+    "subtitle": "장비 상태, 이상 징후, 센서 신호를 즉시 파악하세요.",
     "connecting": "서버 연결 중…",
     "error": "연결 오류(자동 재시도)",
     "connected": "실시간 연결됨",
