Add FTS call desk page and sidebar link

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -22,7 +22,8 @@
     "settings": "Settings",
     "help": "Help",
     "sidebarLabel": "Main navigation",
-    "logout": "Logout"
+    "logout": "Logout",
+    "call": "Call"
   },
   "login": {
     "title": "Sign In",
