chore: soften settings colors and fix button labels

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -119,6 +119,7 @@
     "advanced": {
       "beta": "Enable beta features",
       "apiKey": "API Key",
+      "copy": "Copy",
       "regenerate": "Regenerate"
     },
     "about": {
