--- a/frontend/public/locales/ko/common.json
+++ b/frontend/public/locales/ko/common.json
@@ -119,6 +119,7 @@
     "advanced": {
       "beta": "베타 기능 사용",
       "apiKey": "API 키",
+      "copy": "복사",
       "regenerate": "재발급"
     },
     "about": {
