feat: add CCTV streaming page with multi-protocol support

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -23,7 +23,8 @@
     "help": "Help",
     "sidebarLabel": "Main navigation",
     "logout": "Logout",
-    "call": "Call"
+    "call": "Call",
+    "cctv": "CCTV"
   },
   "login": {
     "title": "Sign In",
