--- a/frontend/public/locales/ko/common.json
+++ b/frontend/public/locales/ko/common.json
@@ -23,7 +23,8 @@
     "help": "도움말",
     "sidebarLabel": "주요 탐색",
     "logout": "로그아웃",
-    "call": "전화"
+    "call": "전화",
+    "cctv": "CCTV"
   },
   "login": {
     "title": "로그인",
